V3168 Upadate minore sinottici

--- a/Prevu.Synoptics.V3168_Sirplaste/P020.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P020.xaml
@@ -121,7 +121,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="303" StatusComponent="018-01-MA1" PipeHeight="Medium" Canvas.Left="575" Canvas.Top="187"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1" Canvas.Left="281" Canvas.Top="558">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="89" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1" Canvas.Left="282" Canvas.Top="558">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -364,9 +364,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="018-21-CV1" Canvas.Left="352" Canvas.Top="80"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
-            ComponentName="018-21-CV2" Height="50" Width="88" Canvas.Left="352" Canvas.Top="135"/>
+            ComponentName="018-21-CV2" Height="50" Width="90" Canvas.Left="352" Canvas.Top="135"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="020-41-LT1" Canvas.Left="967" Canvas.Top="242"/>
