--- a/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
@@ -61,7 +61,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="204" Color="Water" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="870" Canvas.Top="364" Height="4"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="353" Canvas.Top="184"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="274" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="831" Canvas.Top="183">
             <Labels:Pipe.RenderTransform>
@@ -86,8 +85,8 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="268" Color="Water" StatusComponent="457-01-MA1" Canvas.Left="719" Canvas.Top="715"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="112" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="161" Canvas.Top="244"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="121" StatusComponent="382-01-MA1" PipeHeight="Medium" Canvas.Left="164" Canvas.Top="184"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="401" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="161" Canvas.Top="715"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="474" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="-75" Canvas.Top="479">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="402" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="160" Canvas.Top="715"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="474" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="-75" Canvas.Top="479">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -154,6 +153,16 @@
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
                     <RotateTransform Angle="90.1"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="205" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="870" Canvas.Top="364" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
