--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -22,7 +22,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Width="100" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1089" Canvas.Top="298" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Width="100" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1089" Canvas.Top="299" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Width="82" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1130" Canvas.Top="339" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Air" Width="81" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1131" Canvas.Top="339" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
