--- a/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
@@ -42,7 +42,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="257" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="646" Canvas.Top="470" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="258" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="646" Canvas.Top="470" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
