--- a/Prevu.Synoptics.V3168_Sirplaste/P288.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P288.xaml
@@ -71,7 +71,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="112" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="803" Canvas.Top="559">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="804" Canvas.Top="559">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -101,7 +101,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="316" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="244" Canvas.Top="417">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="320" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="242" Canvas.Top="416">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -161,7 +161,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="337" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="226-01-MA1" Canvas.Left="619" Canvas.Top="135">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="336" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="226-01-MA1" Canvas.Left="620" Canvas.Top="135">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
