--- a/Prevu.Synoptics.V3168_Sirplaste/P290.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P290.xaml
@@ -231,7 +231,7 @@
             JumpToLabel="324-01-MA1" Canvas.Left="1299" Canvas.Top="587" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="269-01-MA1" Canvas.Left="384" Canvas.Top="230" />
+            ComponentName="269-01-MA1" Canvas.Left="384" Canvas.Top="235" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="273-01-YA1" Canvas.Left="467" Canvas.Top="428" />
@@ -258,7 +258,7 @@
             Margin="126,152,0,0" 
             VerticalAlignment="Top" 
             ComponentName="268-21-CV1"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="400" Canvas.Top="286" HorizontalAlignment="Center" VerticalAlignment="Center" Width="58" />
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="404" Canvas.Top="290" HorizontalAlignment="Center" VerticalAlignment="Top" Width="50" Height="50" />
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="155" Canvas.Top="682" Width="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
