--- a/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
@@ -54,7 +54,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="125" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="22" Text="ANTIFOAM" Canvas.Left="635" Canvas.Top="436"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="137" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Text="ADDITIVE" Canvas.Left="635" Canvas.Top="404"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="138" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Text="ADDITIVE" Canvas.Left="635" Canvas.Top="404"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="5" Canvas.Left="638" Canvas.Top="563">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -65,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="273" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Canvas.Left="634" Canvas.Top="547">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="273" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" Canvas.Left="634" Canvas.Top="546">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -96,7 +96,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="41" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1" Canvas.Left="1237" Canvas.Top="511"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="41" Color="Water" StatusComponent="377-01-MA1" Canvas.Left="1237" Canvas.Top="511"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="182" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="370-25-CV1" Canvas.Left="640" Canvas.Top="592">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -119,7 +119,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="182" StatusComponent="370-21-CV1" Canvas.Left="538" Canvas.Top="616"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="429" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="322" Canvas.Top="746"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="248" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="199" Canvas.Top="624">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="248" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="326" Canvas.Top="503">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -212,7 +212,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="51" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-21-CV1" Canvas.Left="1189" Canvas.Top="604">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="43" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1193" Canvas.Top="608">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -222,7 +222,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="121" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-23-CV1" Canvas.Left="1179" Canvas.Top="569">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="121" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1179" Canvas.Top="569">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -232,7 +232,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="114" StatusComponent="373-01-MA1" VisibilityComponent="370-25-CV1" Canvas.Left="286" Canvas.Top="502"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="114" StatusComponent="373-01-MA1" Canvas.Left="286" Canvas.Top="502"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1" Canvas.Left="1308" Canvas.Top="511"/>
         <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="985" Canvas.Top="510"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="624" Canvas.Top="586"/>
@@ -298,7 +298,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="298" Canvas.Top="588">
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="298" Canvas.Top="588">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
