--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -13,17 +13,19 @@
              mc:Ignorable="d" 
              d:Height="600" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="600" Width="1700">
+        <Labels:Pipe Width="69" RenderTransformOrigin="0.5,0.5" StatusComponent="376-01-MA1" Canvas.Left="1031" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="121" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" Canvas.Left="155" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" Canvas.Left="409" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" Canvas.Left="494" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="121" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Canvas.Left="594" Canvas.Top="333" HorizontalAlignment="Center" VerticalAlignment="Center" Text="&gt;"/>
+        <Labels:Pipe Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Canvas.Left="584" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
         <Labels:Pipe Width="61" RenderTransformOrigin="0.5,0.5" StatusComponent="322-01-MA1" Canvas.Left="740" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="57" RenderTransformOrigin="0.5,0.5" StatusComponent="324-01-MA1" Canvas.Left="831" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="175" RenderTransformOrigin="0.5,0.5" StatusComponent="376-01-MA1" Canvas.Left="917" Canvas.Top="333" HorizontalAlignment="Left" VerticalAlignment="Center" Text="&gt;"/>
+        <Labels:Pipe Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="376-01-MA1" Canvas.Left="917" Canvas.Top="328" HorizontalAlignment="Center" VerticalAlignment="Center" Icon="Right" Height="29"/>
         <Labels:Pipe Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="1129" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="224" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="1217" Canvas.Top="333" HorizontalAlignment="Center" VerticalAlignment="Top" Text="&gt;"/>
+        <Labels:Pipe Width="232" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="1217" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="812-01-MA1" Canvas.Left="1475" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="240" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" Canvas.Left="145" Canvas.Top="333" HorizontalAlignment="Center" VerticalAlignment="Center" Text="&gt;"/>
-        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="387" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Top" Color="Water" Text="&lt;">
+        <Labels:Pipe Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" Canvas.Left="233" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right" Height="23"/>
+        <Labels:Pipe Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="371" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -33,7 +35,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="429" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Text="&gt;">
+        <Labels:Pipe Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="415" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -49,14 +51,14 @@
             <Labels:GroupLabel HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="020" Canvas.Left="92" Canvas.Top="280" />
             <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="Q11" Canvas.Left="80" Canvas.Top="148"/>
             <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="S110" Canvas.Left="80" Canvas.Top="220"/>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Feeding Area" Canvas.Left="51" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Feeding Area" Canvas.Left="51" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
         </Canvas>
-        <Canvas x:Name="L1_Q41" Height="470" Width="297" Canvas.Left="338" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="470"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Canvas x:Name="L1_Q41" Height="470" Width="297" Canvas.Left="329" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="470"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q41" Canvas.Left="104" Canvas.Top="148"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S410" Canvas.Left="104" Canvas.Top="220"/>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Grinder Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Grinder Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Labels:GroupLabel GroupName="210" Canvas.Left="30" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="230" Canvas.Left="116" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="290" Canvas.Left="202" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -67,7 +69,7 @@
             <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q51" Canvas.Left="104" Canvas.Top="148"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S510" Canvas.Left="104" Canvas.Top="220"/>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Washing Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Washing Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Labels:GroupLabel GroupName="320" Canvas.Left="30" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="330" Canvas.Left="116" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="350" Canvas.Left="202" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -77,7 +79,7 @@
             <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q61" Canvas.Left="104" Canvas.Top="148"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S610" Canvas.Left="104" Canvas.Top="220"/>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Separation Area" Canvas.Left="58" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Separation Area" Canvas.Left="58" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Labels:GroupLabel GroupName="430" Canvas.Left="67" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="530" Canvas.Left="153" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         </Canvas>
@@ -86,7 +88,7 @@
             <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q91" Canvas.Left="104" Canvas.Top="148"/>
             <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S910" Canvas.Left="104" Canvas.Top="220"/>
-            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Storage Area" Canvas.Left="76" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Storage Area" Canvas.Left="76" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Labels:GroupLabel GroupName="810" Canvas.Left="71" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="997" Canvas.Left="157" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Labels:GroupLabel GroupName="970" Canvas.Left="116" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
