Drawings update colore immagine "Waste"

--- a/Prevu.Drawings/Machines/Misc/Waste.xaml
+++ b/Prevu.Drawings/Machines/Misc/Waste.xaml
@@ -8,7 +8,7 @@
   
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg6" Width="100" Height="100">
-      <Path  Name="path2" Fill="#FF6D4C41" Effect="{DynamicResource MaterialDesignElevationShadow1}">
+      <Path  Name="path2" Fill="#BDBDBD" Effect="{DynamicResource MaterialDesignElevationShadow1}">
         <Path.Data>
           <PathGeometry Figures="M42.5107 35.2574C43.0737 34.4684 43.9834 34 44.9527 34H55.0408C56.0223 34 56.9417 34.4801 57.5027 35.2855L76.8624 63.0844C77.2737 63.6751 77.459 64.3939 77.3844 65.1097L75.2801 85.3108C75.1209 86.8391 73.8328 88 72.2963 88H26.7604C25.2001 88 23.9003 86.804 23.7708 85.2491L22.0914 65.0963C22.0324 64.3885 22.2264 63.6827 22.639 63.1045L42.5107 35.2574Z" FillRule="NonZero"/>
         </Path.Data>
