--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
@@ -8,22 +8,21 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D880" 
              mc:Ignorable="d" 
-             Height="500" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid d:IsLocked="True">
-        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="230,75,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="230,139,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" d:IsLocked="True" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="211,212,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="455,75,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="455,139,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" d:IsLocked="True" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="435,212,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="143,22,0,0" 
+             Height="427" Width="452" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="427" Width="452">
+        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Width="364" Canvas.Left="45" Canvas.Top="28" Height="376" VerticalAlignment="Top"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA1" Canvas.Left="54" Canvas.Top="48"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" Canvas.Left="101" Canvas.Top="112" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" Canvas.Left="101" Canvas.Top="185"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" Canvas.Left="307" Canvas.Top="48"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" Canvas.Left="307" Canvas.Top="112" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" Canvas.Left="307" Canvas.Top="185"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
          VerticalAlignment="Top" 
-         ComponentName="880-61-LEV" d:IsLocked="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="367,22,0,0" 
+         ComponentName="880-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="880-62-LEV" d:IsLocked="True"/>
-    </Grid>
+            ComponentName="880-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
+        <Labels:SignalLabel ComponentName="810-61-LEV" SignalName="LSHA2" Canvas.Left="159" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
 </UserControl>
