--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
@@ -9,10 +9,10 @@
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D997" 
              mc:Ignorable="d" 
              Height="400" Width="500" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid d:IsLocked="True">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="222,122,0,0" VerticalAlignment="Top" Width="30" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS2" d:IsLocked="True"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="150,122,0,0" VerticalAlignment="Top" Width="32" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS1" d:IsLocked="True"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="210,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS2" d:IsLocked="True">
+    <Canvas  Height="400" Width="500">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="222,122,0,0" VerticalAlignment="Top" Width="30" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="150,122,0,0" VerticalAlignment="Top" Width="32" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="210,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,7 +22,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="114,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS1" d:IsLocked="True">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="114,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="166,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="74" d:IsLocked="True">
+        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="166,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="74">
             <Machines:DV_Diverter_T.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,36 +42,36 @@
                 </TransformGroup>
             </Machines:DV_Diverter_T.RenderTransform>
         </Machines:DV_Diverter_T>
-        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="195,170,0,0" VerticalAlignment="Top" Height="127" Width="110" d:IsLocked="True"/>
-        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="99,170,0,0" VerticalAlignment="Top" Height="127" Width="110" d:IsLocked="True"/>
-        <Rectangle HorizontalAlignment="Left" Height="1" Margin="76,262,0,0" Stroke="Black" VerticalAlignment="Top" Width="254" d:IsLocked="True"/>
-        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="66,239,0,89" Width="10" d:IsLocked="True"/>
-        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="329,239,0,89" Width="10" d:IsLocked="True"/>
-        <TextBlock HorizontalAlignment="Left" Margin="148,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" d:IsLocked="True"><Run Language="it-it" Text="1"/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="244,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" Text="2" d:IsLocked="True"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="195,170,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="99,170,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Rectangle HorizontalAlignment="Left" Height="1" Margin="76,262,0,0" Stroke="Black" VerticalAlignment="Top" Width="254"/>
+        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="66,239,0,89" Width="10"/>
+        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="329,239,0,89" Width="10"/>
+        <TextBlock HorizontalAlignment="Left" Margin="148,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22"><Run Language="it-it" Text="1"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="244,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" Text="2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          Margin="109,302,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="997-61-BAG" d:IsLocked="True"/>
+         ComponentName="997-61-BAG"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          Margin="204,302,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="997-62-BAG" d:IsLocked="True"/>
+         ComponentName="997-62-BAG"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          Margin="384,20,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="997-65-BBF" d:IsLocked="True"/>
+         ComponentName="997-65-BBF"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="159,44,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="997-25-CV1" d:IsLocked="True"/>
+            ComponentName="997-25-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="268,120,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="997-22-CV1" d:IsLocked="True"/>
+            ComponentName="997-22-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="46,120,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="997-21-CV1" d:IsLocked="True"/>
-    </Grid>
+            ComponentName="997-21-CV1"/>
+    </Canvas>
 </UserControl>
