V3085 update generale sinottici

--- a/Prevu.Synoptics.V3085_Anviplas/D210.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D210.xaml
@@ -29,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="180,226,0,0" VerticalAlignment="Top" Color="Oil" Width="54" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="210-03-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="180,226,0,0" VerticalAlignment="Top" Color="Oil" Width="54" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="210-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
