--- a/Prevu.Synoptics.V3085_Anviplas/P288.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P288.xaml
@@ -41,7 +41,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" Color="Water" StatusComponent="281-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="819" Canvas.Top="222">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" Color="Water" StatusComponent="298-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="819" Canvas.Top="222">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,7 +112,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="63" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent="" Canvas.Left="828" Canvas.Top="326"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="543" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="361" Canvas.Top="140">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="543" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="361" Canvas.Top="140">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -123,7 +123,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Pits:PSP_Collecting_Pit_A HorizontalAlignment="Center" Width="180" Canvas.Left="277" Canvas.Top="334" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="274" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="226" Canvas.Top="275">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="274" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="226" Canvas.Top="275">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -200,11 +200,11 @@
         </Labels:DeviceLabel>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            JumpFromLabel="230-21-CV1" 
+            JumpFromLabel="291-01-MA1" 
             JumpToLabel="230-21-CV1" Direction="Left" Canvas.Left="381" Canvas.Top="597"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            JumpFromLabel="225-41-LT1" 
+            JumpFromLabel="288-41-LT1" 
             JumpToLabel="457-01-MA1" Canvas.Left="536" Canvas.Top="318"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
