--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="1034" Canvas.Top="582">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-23-CV1" Canvas.Left="1034" Canvas.Top="582">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="96" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="786" Canvas.Top="572">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="96" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-21-CV1" Canvas.Left="786" Canvas.Top="572">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -66,9 +66,9 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="105" Color="Water" StatusComponent="450-01-MA1" Canvas.Left="323" Canvas.Top="324"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="226" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="214" Canvas.Top="264"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="289" Color="Water" StatusComponent="430-04-MA1" VisibilityComponent="" Canvas.Left="1088" Canvas.Top="485"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="370" Canvas.Top="247"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="889" Canvas.Top="506">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="289" Color="Water" StatusComponent="432-01-MA1" VisibilityComponent="" Canvas.Left="1088" Canvas.Top="485"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="420-71-ECS1" Canvas.Left="370" Canvas.Top="247"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="889" Canvas.Top="506">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -148,7 +148,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="413" Canvas.Top="513">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="413" Canvas.Top="513" VisibilityComponent="420-22-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -158,7 +158,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-23-CV1" Canvas.Left="413" Canvas.Top="583">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-23-CV1" Canvas.Left="413" Canvas.Top="583" VisibilityComponent="420-23-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -178,7 +178,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="795" Canvas.Top="648">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-21-CV1" Canvas.Left="795" Canvas.Top="648" VisibilityComponent="430-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -188,7 +188,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-23-CV1" Canvas.Left="795" Canvas.Top="718">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-22-CV1" Canvas.Left="795" Canvas.Top="718" VisibilityComponent="430-22-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -198,7 +198,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-22-CV1" Canvas.Left="1034" Canvas.Top="651">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-23-CV1" Canvas.Left="1034" Canvas.Top="651" VisibilityComponent="430-23-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -208,7 +208,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="420-23-CV1" Canvas.Left="1034" Canvas.Top="721">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="430-24-CV1" Canvas.Left="1034" Canvas.Top="721" VisibilityComponent="430-24-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -219,7 +219,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Separation:VSP_SeparationTank_wMotorsAndScrew HorizontalAlignment="Left" Width="489" Height="363" Canvas.Left="710" Canvas.Top="210" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="463" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" VisibilityComponent="" Canvas.Left="911" Canvas.Top="528">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="463" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="911" Canvas.Top="528">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -229,7 +229,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" Color="Water" StatusComponent="430-03-MA1" VisibilityComponent="" Canvas.Left="847" Canvas.Top="484"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" Color="Water" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="847" Canvas.Top="484"/>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1047" Canvas.Top="451">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -303,7 +303,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
                       VerticalAlignment="Center" 
                       JumpFromLabel="420-01-MA1" 
-                      JumpToLabel="380-01-MA1" Canvas.Left="148" Canvas.Top="233"/>
+                      JumpToLabel="233-01-MA1" Canvas.Left="148" Canvas.Top="233"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="432-01-MA1" Canvas.Left="945" Canvas.Top="460"/>
@@ -361,10 +361,10 @@
             ComponentName="430-22-CV1" Canvas.Left="864" Canvas.Top="661"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-23-CV1" Canvas.Left="1102" Canvas.Top="595"/>
+            ComponentName="430-23-CV1" Canvas.Left="1102" Canvas.Top="595"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="420-24-CV1" Canvas.Left="1102" Canvas.Top="664"/>
+            ComponentName="430-24-CV1" Canvas.Left="1102" Canvas.Top="664"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="420-01-MA1" 
