--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P474" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="310" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="791" Canvas.Top="692">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="310" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="791" Canvas.Top="692">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -31,7 +31,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="728" Canvas.Top="630">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="728" Canvas.Top="630">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -80,7 +80,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="421"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="353"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="353"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="216" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="836" Canvas.Top="385">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="835" Canvas.Top="386">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -169,7 +169,7 @@
             ComponentName="470-61-LEV" Canvas.Left="396" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
             JumpFromLabel="492-01-MA1" 
-            JumpToLabel="482-01-MA1" Canvas.Left="965" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="482-21-CV1" Canvas.Left="965" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="470-VIEW" DetailsPageName="D470" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="491" Canvas.Top="225" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
