--- a/Prevu.Synoptics.V3085_Anviplas/P230.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P230.xaml
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="330" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-21-CV1" Canvas.Left="898" Canvas.Top="691" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="334" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-21-CV1" Canvas.Left="894" Canvas.Top="691" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -162,7 +162,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="020-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="156" Canvas.Top="148">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="156" Canvas.Top="148">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -172,7 +172,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="020-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="124" Canvas.Top="109">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="124" Canvas.Top="109">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -192,7 +192,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="220" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="390" Canvas.Top="590" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="184" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="408" Canvas.Top="574" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -202,7 +202,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="461" Canvas.Top="721" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="461" Canvas.Top="690" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -222,7 +222,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="103" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="228" Canvas.Top="329" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="103" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-71-ECS1" Canvas.Left="228" Canvas.Top="329" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -232,7 +232,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="226" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-03-MA1" Canvas.Left="225" Canvas.Top="590" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="198" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-03-MA1" Canvas.Left="239" Canvas.Top="578" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -242,7 +242,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-03-MA1" Canvas.Left="329" Canvas.Top="685" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-03-MA1" Canvas.Left="329" Canvas.Top="655" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -282,7 +282,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="151" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="341" Canvas.Top="629" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="151" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="341" Canvas.Top="596" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -292,7 +292,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-26-CV1" Canvas.Left="127" Canvas.Top="629" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-26-CV1" Canvas.Left="127" Canvas.Top="596" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -302,7 +302,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="88" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-26-CV1" Canvas.Left="90" Canvas.Top="664" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="88" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-26-CV1" Canvas.Left="90" Canvas.Top="631" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -327,12 +327,12 @@
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0.1"/>
+                    <RotateTransform Angle="0"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="55" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-71-ECS1" Canvas.Left="278" Canvas.Top="547">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="55" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="278" Canvas.Top="547">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -342,7 +342,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="218" Canvas.Top="629" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="210-25-CV1" Canvas.Left="218" Canvas.Top="596" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -498,9 +498,9 @@
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Canvas.Left="158" Canvas.Top="189"/>
         <Stirrer:STR_PrewashReactorB HorizontalAlignment="Center" Width="209" Canvas.Left="418" Canvas.Top="177" VerticalAlignment="Top" />
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="114" Canvas.Left="405" Canvas.Top="487"/>
-        <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="469" Canvas.Top="725"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="114" Canvas.Left="405" Canvas.Top="677"/>
-        <Border BorderThickness="1" HorizontalAlignment="Center" Height="125" VerticalAlignment="Top" Width="56" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="472" Canvas.Top="533" />
+        <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="469" Canvas.Top="694"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="114" Canvas.Left="405" Canvas.Top="647"/>
+        <Border BorderThickness="1" HorizontalAlignment="Center" Height="105" VerticalAlignment="Top" Width="56" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="472" Canvas.Top="526" />
         <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="38" Width="50"  RenderTransformOrigin="0.5,0.5" Canvas.Left="260" Canvas.Top="401">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -511,7 +511,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="38" Width="50"  RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="618">
+        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="38" Width="50"  RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="585">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -521,7 +521,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Rectangle HorizontalAlignment="Center" Height="3" Stroke="Black" VerticalAlignment="Top" Width="45" StrokeThickness="2" Canvas.Left="112" Canvas.Top="707" />
+        <Rectangle HorizontalAlignment="Center" Height="3" Stroke="Black" VerticalAlignment="Top" Width="45" StrokeThickness="2" Canvas.Left="112" Canvas.Top="674" />
         <Rectangle HorizontalAlignment="Center" Height="46" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="232" Canvas.Top="324" >
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -578,7 +578,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="208-01-MA1" 
-            JumpToLabel="020-01-MA1" Canvas.Left="72" Canvas.Top="84"/>
+            JumpToLabel="024-01-MA1" Canvas.Left="72" Canvas.Top="84"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-01-MA1" Canvas.Left="459" Canvas.Top="130"/>
@@ -590,14 +590,14 @@
             ComponentName="210-22-CV1" Canvas.Left="529" Canvas.Top="473" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="210-23-CV1" Canvas.Left="529" Canvas.Top="664" />
+            ComponentName="210-23-CV1" Canvas.Left="529" Canvas.Top="634" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="210-25-CV1" Canvas.Left="310" Canvas.Top="395" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="210-26-CV1" Canvas.Left="161" Canvas.Top="569" />
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-HYD" DetailsPageName="D210" Canvas.Left="313" Canvas.Top="663"  />
+            ComponentName="210-26-CV1" Canvas.Left="161" Canvas.Top="536" />
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-HYD" DetailsPageName="D210" Canvas.Left="313" Canvas.Top="633"  />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="210-71-ECS1" Canvas.Left="170" Canvas.Top="265"/>
@@ -611,6 +611,6 @@
             VerticalAlignment="Center" 
             ComponentName="210-21-CV1" Canvas.Left="738" Canvas.Top="104"/>
         <Labels:DeviceLabel 
-            ComponentName="210-DISCH" Canvas.Left="529" Canvas.Top="734" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            ComponentName="210-DISCH" Canvas.Left="529" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
